# books_downloader

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  pyproject.toml  requirements.txt
.github/workflows/: build_docker_image.yml  rust-clippy.yml
docker/: build-dev.dockerfile  build.dockerfile
docs/superpowers/plans/: 2026-07-08-panic-on-untrusted-input.md  2026-07-08-timeouts-failover-resource-waste.md  2026-07-08-unbounded-downloads-zip-bomb.md
scripts/: env.sh  healthcheck.py  start.sh
src/: config.rs  main.rs  views.rs
src/app/: views.py
src/app/services/: base.py  book_library.py  dowloaders_manager.py  exceptions.py  fl_downloader.py  utils.py
src/core/: app.py  config.py
src/services/: covert.rs  filename_getter.rs  mod.rs
src/services/book_library/: mod.rs  types.rs
src/services/downloader/: mod.rs  types.rs  utils.rs  zip.rs
