[package]
name = "books_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json", "stream", "multipart"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
sentry-tracing = "0.35.0"
tower-http = { version = "0.6.2", features = ["trace"] }

once_cell = "1.20.2"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
axum = "0.8.1"
translit = "0.6.0"
zip = "2.2.2"
tempfile = "3.15.0"
bytes = "1.9.0"
axum-prometheus = "0.8.0"
base64 = "0.22.1"

sentry = { version = "0.35.0", features = ["debug-images"] }
dotenvy = "0.15.7"
