[package]
name = "books_downloader"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = 'abort'

[profile.profiling]
inherits = "release"
debug = true
strip = false


[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["compat"] }
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json", "stream", "multipart"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"]}
sentry-tracing = "0.41.0"
tower-http = { version = "0.6.2", features = ["trace"] }

once_cell = "1.21.1"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum = "0.8.1"
translit = "0.6.0"
zip = "4.2.0"
tempfile = "3.19.1"
bytes = "1.10.1"
axum-prometheus = "0.8.0"
base64 = "0.22.1"

sentry = { version = "0.41.0", features = ["debug-images"] }
dotenvy = "0.15.7"
